<resources>
    <string name="app_name">Clyn</string>

    <string name="loading">L o a d i n g . . .</string>
    <string name="error"> Error!!!</string>
    <string name="noNetMess">You don\'t have an active Internet Connection.</string>

    <string name="sing_in">Sign in</string>
    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>
    <string name="fb">Login with Facebook</string>
    <string name="google">Login with Google</string>
    <string name="phone">Login with Phone Number</string>
    <string name="login_singup">Don\'t Have an Account? &#160;</string>
    <string name="login_singup_buttor"> Sign-up</string>
    <string name="agree">By signing up you agree with the </string>
    <string name="tou">Terms of use</string>

    <string name="title_activity_sing_up">singUpActivity</string>

    <string name="sing_up">Sing Up</string>
    <string name="email">Email Address</string>
    <string name="repeat">Repeat password</string>
    <string name="fb_sing_up">Sing up with Facebook</string>
    <string name="google_sing_up">Sing up with Google</string>
    <string name="phone_sing_up">Sing up with Phone Number</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Facebook Login Data -->
    <string name="facebook_app_id">1855175678060907</string>
    <string name="fb_login_protocol_scheme">fb1855175678060907</string>

    <string name="com_stripe_publishable_key">pk_test_pTPMkLbTMszot17KHsMtCEml</string>

    <string name="addPayment">Add Payment Method</string>
    <string name="paymentMethods">Payment Methods</string>

    <string name="endingIn">Card ending in </string>
    <string name="progressMessage">Creating Token&#8230;</string>
    <string name="validationErrors">Validation Errors</string>

    <string name="cardNumber">Card Number</string>
    <string name="save">Save</string>
    <string name="saverx">Save Rx</string>
    <string name="saveService">Save with Service</string>
    <string name="cvc">CVC</string>

    <string name="ok">OK</string>

    <string-array name="currency_array">
        <item>Currency (optional)</item>
        <item>Unspecified</item>
        <item>USD</item>
    </string-array>
</resources>
